--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Ali Yusuf</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./Biodata.css'>
-    <script src='./Biodata.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='./index.css'>
+    <script src='./index.js'></script>
 </head>
 
 <body>
